# Synthrax

./: .gitignore  CMakeLists.txt  README.md  index_key.txt  main.cpp  synthrax
.cache/clangd/index/: main.cpp.95728EF75992C35E.idx
src/: 60-synthrax-gateway.conf  main.cpp
